--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "animejs": "^4.2.2",
     "jspdf": "^3.0.4",
     "lucide-react": "^0.555.0",
+    "mermaid": "^11.12.1",
     "next": "16.0.6",
     "react": "19.2.0",
     "react-dom": "19.2.0"
