--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.555.0",
     "mermaid": "^11.12.1",
     "next": "^16.0.7",
+    "pdf2json": "^4.0.0",
     "react": "^19.2.1",
     "react-dom": "^19.2.1"
   },
@@ -23,6 +24,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/animejs": "^3.1.13",
     "@types/node": "^20",
+    "@types/pdf-parse": "^1.1.5",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
